--- a/website/package.json
+++ b/website/package.json
@@ -30,21 +30,25 @@
     "typescript": "~5.6.3"
   },
   "devDependencies": {
-    "@azure-tools/typespec-autorest-canonical": "workspace:~",
     "@azure-tools/typespec-autorest": "workspace:~",
+    "@azure-tools/typespec-autorest-canonical": "workspace:~",
     "@azure-tools/typespec-azure-core": "workspace:~",
     "@azure-tools/typespec-azure-playground-website": "workspace:~",
     "@azure-tools/typespec-azure-portal-core": "workspace:~",
     "@azure-tools/typespec-azure-resource-manager": "workspace:~",
     "@azure-tools/typespec-azure-rulesets": "workspace:~",
     "@azure-tools/typespec-client-generator-core": "workspace:~",
-    "@typespec/internal-build-utils": "workspace:~",
-    "@types/react-dom": "~18.3.0",
+    "@types/hast": "^3.0.4",
     "@types/react": "~18.3.11",
+    "@types/react-dom": "~18.3.0",
     "@types/remark-heading-id": "^1.0.0",
     "@typespec/astro-utils": "workspace:~",
+    "@typespec/internal-build-utils": "workspace:~",
     "astro-expressive-code": "^0.37.0",
     "astro-rehype-relative-markdown-links": "^0.15.0",
-    "remark-heading-id": "^1.0.1"
+    "hast-util-to-html": "^9.0.3",
+    "rehype": "^13.0.2",
+    "remark-heading-id": "^1.0.1",
+    "unist-util-visit": "^5.0.0"
   }
 }
