--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -3,7 +3,10 @@
   "compilerOptions": {
     "baseUrl": "./",
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
+    "jsxImportSource": "react",
+    "paths": {
+      "@components/*": ["./src/components/*"]
+    }
   },
   "exclude": ["dist/"]
 }
