Dedicated job for website ci (#1825)
Same pr as typespec core https://github.com/microsoft/typespec/pull/4994

--- a/eng/pipelines/ci.yml
+++ b/eng/pipelines/ci.yml
@@ -64,6 +64,16 @@ extends:
                   dotnetVersion: 8.0.x
                   osName: windows
 
+          - job: website
+            displayName: Website
+            pool:
+              name: $(LINUXPOOL)
+              image: $(LINUXVMIMAGE)
+              os: linux
+
+            steps:
+              - template: /eng/pipelines/jobs/website.yml
+
           - template: /eng/pipelines/jobs/e2e-job.yml@self
           - job: AutorestChecks
             displayName: "Autorest Checks"
