include typespec core libraries in azure typespec playground

--- a/packages/typespec-azure-playground-website/package.json
+++ b/packages/typespec-azure-playground-website/package.json
@@ -58,11 +58,17 @@
     "@azure-tools/typespec-client-generator-core": "workspace:~",
     "@emotion/react": "^11.13.3",
     "@typespec/compiler": "workspace:~",
+    "@typespec/events": "workspace:~",
     "@typespec/http": "workspace:~",
+    "@typespec/json-schema": "workspace:~",
     "@typespec/openapi": "workspace:~",
     "@typespec/openapi3": "workspace:~",
+    "@typespec/protobuf": "workspace:~",
     "@typespec/rest": "workspace:~",
+    "@typespec/sse": "workspace:~",
+    "@typespec/streams": "workspace:~",
     "@typespec/versioning": "workspace:~",
+    "@typespec/xml": "workspace:~",
     "@vitejs/plugin-react": "~4.3.2",
     "es-module-shims": "~1.10.0",
     "react": "~18.3.1",
