--- a/packages/azure-http-specs/package.json
+++ b/packages/azure-http-specs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@azure-tools/azure-http-specs",
-  "version": "0.1.0-alpha.1",
-  "description": "Spec scenarios and mock apis",
+  "version": "0.1.0-alpha.2",
+  "description": "Azure Spec scenarios and mock apis",
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
