--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fix-version-mismatch": "syncpack fix-mismatches",
     "format": "prettier --write .",
     "format:check": "prettier . --check",
+    "format:dir": "prettier --write",
     "lint": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --fix",
     "pack:all": "chronus pack --pack-destination ./temp/artifacts",
