--- a/.gitignore
+++ b/.gitignore
@@ -126,6 +126,8 @@ lib-cov
 
 # Coverage directory used by tools like istanbul
 coverage
+spec-coverage.json
+manifest.json
 
 # nyc test coverage
 .nyc_output
