--- a/eng/pipelines/publish.yml
+++ b/eng/pipelines/publish.yml
@@ -89,6 +89,20 @@ extends:
                       --source "./packages/typespec-azure-playground-website/dist/" ^
                       --overwrite
 
+              - script: pnpm run validate-scenarios --debug
+                displayName: Validate Scenarios
+
+              - script: pnpm run validate-mock-apis --debug
+                displayName: Validate mock apis
+
+              - task: AzureCLI@2
+                displayName: Upload scenario manifest
+                inputs:
+                  azureSubscription: "TypeSpec Storage"
+                  scriptType: "bash"
+                  scriptLocation: "inlineScript"
+                  inlineScript: "pnpm upload-manifest"
+
           - job: npm_preview
             timeoutInMinutes: 90
             dependsOn: npm_stable
