Add Codegen owners to spector specs

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,6 @@
 * @bterlson @markcowl @allenjzhang @timotheeguerin
 
 /packages/typespec-client-generator-core @lmazuel @m-nash @iscai-msft @srnagar @joheredi
+/packages/azure-http-specs/specs/ @iscai-msft @lmazuel @m-nash @joheredi @srnagar @weidongxu-microsoft @tadelesh @jhendrixMSFT 
 
 /docs/howtos/DataPlane*/ @lmazuel @m-nash @iscai-msft @srnagar @joheredi
