Update enum-driven visibility for http

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,6 @@
 [submodule "core"]
 	path = core
-	url = https://github.com/microsoft/typespec
-	branch = main
+        url = https://github.com/witemple-msft/typespec.git
+	branch = witemple-msft/http-visibility-enum
+	#url = https://github.com/microsoft/typespec
+	#branch = main
