--- a/eng/feeds/arm/tspconfig.yaml
+++ b/eng/feeds/arm/tspconfig.yaml
@@ -31,8 +31,8 @@ options:
     packageDetails:
       name: "@azure/{{#normalizePackageName}}{{parameters.ServiceNamespace}}{{/normalizePackageName}}"
   "@azure-tools/typespec-go":
-    service-dir: "{{#normalizePackageName}}{{parameters.ServiceNamespace}}{{/normalizePackageName}}"
-    package-dir: "{{#normalizePackageName}}{{parameters.ServiceNamespace}}"
+    service-dir: "sdk/resourcemanager/{{normalizePackageName}}"
+    package-dir: "arm{{normalizePackageName}}"
     module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
     fix-const-stuttering: true
     generate-examples: true
