--- a/eng/pipelines/publish.yml
+++ b/eng/pipelines/publish.yml
@@ -58,6 +58,17 @@ extends:
                 env:
                   NPM_AUTH_TOKEN: $(azure-sdk-npm-token)
 
+              - pwsh: |
+                  $publishSummary = Get-Content "./publish-summary.json" | ConvertFrom-Json
+                  if ($publishSummary.packages.'@azure-tools/azure-http-specs'.published -eq $true) {
+                    Write-Output "Setting PublishAzureHttpSpecs variable to true."
+                    Write-Host "##vso[task.setvariable variable=PublishAzureHttpSpecs]true"
+                  } else {
+                    Write-Output "Setting PublishAzureHttpSpecs variable to false."
+                    Write-Host "##vso[task.setvariable variable=PublishAzureHttpSpecs]false"
+                  }
+                displayName: "Check if @azure-tools/azure-http-specs was published"
+
               - script: |
                   echo "Publish summary:"
                   cat ./publish-summary.json
@@ -97,6 +108,7 @@ extends:
 
               - task: AzureCLI@2
                 displayName: Upload scenario manifest
+                condition: eq(variables['PublishAzureHttpSpecs'], 'true')
                 inputs:
                   azureSubscription: "TypeSpec Storage"
                   scriptType: "bash"
