--- a/website/package.json
+++ b/website/package.json
@@ -42,6 +42,7 @@
     "@types/remark-heading-id": "^1.0.0",
     "@typespec/astro-utils": "workspace:~",
     "@typespec/internal-build-utils": "workspace:~",
+    "@typespec/spec-dashboard": "workspace:~",
     "astro-expressive-code": "^0.40.1",
     "astro-rehype-relative-markdown-links": "^0.18.1",
     "hast-util-to-html": "^9.0.4",
