--- a/eng/pipelines/templates/install.yml
+++ b/eng/pipelines/templates/install.yml
@@ -22,9 +22,7 @@ steps:
       key: 'pnpm | "$(Agent.OS)" | pnpm-lock.yaml'
       path: ${{ parameters.pnpmStorePath }}
     displayName: Cache pnpm store
-  - script: |
-      corepack enable
-      corepack prepare pnpm --activate
+  - script: npm install -g pnpm # Pnpm manage-package-manager-versions will respect packageManager field
     displayName: Install pnpm
   - script: pnpm config set store-dir ${{ parameters.pnpmStorePath }}
     displayName: Setup pnpm cache dir
