--- a/.github/policies/prs.triage.generated.yml
+++ b/.github/policies/prs.triage.generated.yml
@@ -48,6 +48,13 @@ configuration:
                   label: lib:tcgc
           - if:
               - includesModifiedFiles:
+                  files:
+                    - packages/typespec-azure-http-specs/**/*
+            then:
+              - addLabel:
+                  label: lib:azure-http-specs
+          - if:
+              - includesModifiedFiles:
                   files: []
             then:
               - addLabel:
