--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,6 @@
 FROM mcr.microsoft.com/devcontainers/javascript-node:20
 
-RUN corepack enable pnpm && \
-  echo 'alias pnpm="corepack pnpm"' >> /home/node/.bash_aliases
+RUN corepack enable pnpm \
+  && echo 'alias pnpm="corepack pnpm"' >> /home/node/.bash_aliases
 
 RUN git config --global submodule.recurse true
