--- a/eng/feeds/arm/tspconfig.yaml
+++ b/eng/feeds/arm/tspconfig.yaml
@@ -7,21 +7,21 @@ options:
     azure-resource-provider-folder: "resource-manager"
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/openapi.json"
   "@azure-tools/typespec-csharp":
-    package-dir: "{replace-with-your-package-name}"
+    package-dir: "Azure.ResourceManager.{{parameters.ServiceNamespace}}"
     clear-output-folder: true
     model-namespace: false
     namespace: "{package-dir}"
   "@azure-tools/typespec-python":
-    package-dir: "{replace-with-your-package-dir}"
+    package-dir: "azure-mgmt-{{#toLowerCase}}{{parameters.ServiceNamespace}}{{/toLowerCase}}"
     package-name: "{package-dir}"
     generate-test: true
     generate-sample: true
   "@azure-tools/typespec-java":
-    package-dir: "{replace-with-your-package-dir}"
-    namespace: "{namespace}"
-    service-name: "{service-name}"
+    package-dir: "azure-resourcemanager-{{#toLowerCase}}{{parameters.ServiceNamespace}}{{/toLowerCase}}"
+    namespace: "com.azure.resourcemanager.{{#toLowerCase}}{{parameters.ServiceNamespace}}{{/toLowerCase}}"
+    service-name: "{{#toLowerCase}}{{parameters.ServiceNamespace}}{{/toLowerCase}}"
   "@azure-tools/typespec-ts":
-    package-dir: "arm-{name}"
+    package-dir: "arm-{{#toLowerCase}}{{parameters.ServiceNamespace}}{{/toLowerCase}}"
     azureSdkForJs: true
     isModularLibrary: true
     generateMetadata: true
@@ -31,8 +31,8 @@ options:
     packageDetails:
       name: "@azure/{package-dir}"
   "@azure-tools/typespec-go":
-    service-dir: "sdk/resourcemanager/{{normalizePackageName}}"
-    package-dir: "arm{{normalizePackageName}}"
+    service-dir: "sdk/resourcemanager/{{#toLowerCase}}{{parameters.ServiceNamespace}}{{/toLowerCase}}"
+    package-dir: "arm{{#toLowerCase}}{{parameters.ServiceNamespace}}{{/toLowerCase}}"
     module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
     fix-const-stuttering: true
     generate-examples: true
