[tcgc] map all stream request and response type to bytes (#2256)
resolve: https://github.com/Azure/typespec-azure/issues/2053

--- a/packages/typespec-client-generator-core/package.json
+++ b/packages/typespec-client-generator-core/package.json
@@ -62,9 +62,12 @@
   "peerDependencies": {
     "@azure-tools/typespec-azure-core": "workspace:~",
     "@typespec/compiler": "workspace:~",
+    "@typespec/events": "workspace:~",
     "@typespec/http": "workspace:~",
     "@typespec/openapi": "workspace:~",
     "@typespec/rest": "workspace:~",
+    "@typespec/sse": "workspace:~",
+    "@typespec/streams": "workspace:~",
     "@typespec/versioning": "workspace:~",
     "@typespec/xml": "workspace:~"
   },
@@ -74,11 +77,14 @@
     "@types/node": "~22.13.9",
     "@types/pluralize": "^0.0.33",
     "@typespec/compiler": "workspace:~",
+    "@typespec/events": "workspace:~",
     "@typespec/http": "workspace:~",
     "@typespec/library-linter": "workspace:~",
     "@typespec/openapi": "workspace:~",
     "@typespec/prettier-plugin-typespec": "workspace:~",
     "@typespec/rest": "workspace:~",
+    "@typespec/sse": "workspace:~",
+    "@typespec/streams": "workspace:~",
     "@typespec/tspd": "workspace:~",
     "@typespec/xml": "workspace:~",
     "@vitest/coverage-v8": "^3.0.7",
