--- a/eng/pipelines/jobs/e2e-job.yml
+++ b/eng/pipelines/jobs/e2e-job.yml
@@ -21,7 +21,7 @@ jobs:
       - template: /eng/pipelines/templates/build.yml
 
       - script: node packages/e2e-tests/e2e-tests.mjs
-        displayName: Cadl Ranch e2e tests
+        displayName: Azure Http Specs e2e tests
 
       - script: pnpm test:e2e
         displayName: E2E Tests
