--- a/eng/feeds/package.json
+++ b/eng/feeds/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "description": "",
   "devDependencies": {
-    "@typespec/compiler": "workspace:~",
+    "@typespec/compiler": "workspace:^",
     "vitest": "^3.0.7"
   }
 }
