--- a/packages/typespec-autorest/package.json
+++ b/packages/typespec-autorest/package.json
@@ -55,28 +55,28 @@
     "!dist/test/**"
   ],
   "peerDependencies": {
-    "@azure-tools/typespec-azure-core": "workspace:~",
-    "@azure-tools/typespec-azure-resource-manager": "workspace:~",
-    "@azure-tools/typespec-client-generator-core": "workspace:~",
-    "@typespec/compiler": "workspace:~",
-    "@typespec/http": "workspace:~",
-    "@typespec/openapi": "workspace:~",
-    "@typespec/rest": "workspace:~",
-    "@typespec/versioning": "workspace:~"
+    "@azure-tools/typespec-azure-core": "workspace:^",
+    "@azure-tools/typespec-azure-resource-manager": "workspace:^",
+    "@azure-tools/typespec-client-generator-core": "workspace:^",
+    "@typespec/compiler": "workspace:^",
+    "@typespec/http": "workspace:^",
+    "@typespec/openapi": "workspace:^",
+    "@typespec/rest": "workspace:^",
+    "@typespec/versioning": "workspace:^"
   },
   "devDependencies": {
-    "@azure-tools/typespec-azure-core": "workspace:~",
-    "@azure-tools/typespec-azure-resource-manager": "workspace:~",
-    "@azure-tools/typespec-client-generator-core": "workspace:~",
+    "@azure-tools/typespec-azure-core": "workspace:^",
+    "@azure-tools/typespec-azure-resource-manager": "workspace:^",
+    "@azure-tools/typespec-client-generator-core": "workspace:^",
     "@types/node": "~22.13.9",
-    "@typespec/compiler": "workspace:~",
-    "@typespec/http": "workspace:~",
-    "@typespec/json-schema": "workspace:~",
-    "@typespec/library-linter": "workspace:~",
-    "@typespec/openapi": "workspace:~",
-    "@typespec/rest": "workspace:~",
-    "@typespec/tspd": "workspace:~",
-    "@typespec/versioning": "workspace:~",
+    "@typespec/compiler": "workspace:^",
+    "@typespec/http": "workspace:^",
+    "@typespec/json-schema": "workspace:^",
+    "@typespec/library-linter": "workspace:^",
+    "@typespec/openapi": "workspace:^",
+    "@typespec/rest": "workspace:^",
+    "@typespec/tspd": "workspace:^",
+    "@typespec/versioning": "workspace:^",
     "@vitest/coverage-v8": "^3.0.7",
     "@vitest/ui": "^3.0.7",
     "c8": "^10.1.3",
