--- a/packages/typespec-azure-playground-website/package.json
+++ b/packages/typespec-azure-playground-website/package.json
@@ -51,24 +51,24 @@
     "!dist/test/**"
   ],
   "dependencies": {
-    "@azure-tools/typespec-autorest": "workspace:~",
-    "@azure-tools/typespec-azure-core": "workspace:~",
-    "@azure-tools/typespec-azure-resource-manager": "workspace:~",
-    "@azure-tools/typespec-azure-rulesets": "workspace:~",
-    "@azure-tools/typespec-client-generator-core": "workspace:~",
+    "@azure-tools/typespec-autorest": "workspace:^",
+    "@azure-tools/typespec-azure-core": "workspace:^",
+    "@azure-tools/typespec-azure-resource-manager": "workspace:^",
+    "@azure-tools/typespec-azure-rulesets": "workspace:^",
+    "@azure-tools/typespec-client-generator-core": "workspace:^",
     "@emotion/react": "^11.14.0",
-    "@typespec/compiler": "workspace:~",
-    "@typespec/events": "workspace:~",
-    "@typespec/http": "workspace:~",
-    "@typespec/json-schema": "workspace:~",
-    "@typespec/openapi": "workspace:~",
-    "@typespec/openapi3": "workspace:~",
-    "@typespec/protobuf": "workspace:~",
-    "@typespec/rest": "workspace:~",
-    "@typespec/sse": "workspace:~",
-    "@typespec/streams": "workspace:~",
-    "@typespec/versioning": "workspace:~",
-    "@typespec/xml": "workspace:~",
+    "@typespec/compiler": "workspace:^",
+    "@typespec/events": "workspace:^",
+    "@typespec/http": "workspace:^",
+    "@typespec/json-schema": "workspace:^",
+    "@typespec/openapi": "workspace:^",
+    "@typespec/openapi3": "workspace:^",
+    "@typespec/protobuf": "workspace:^",
+    "@typespec/rest": "workspace:^",
+    "@typespec/sse": "workspace:^",
+    "@typespec/streams": "workspace:^",
+    "@typespec/versioning": "workspace:^",
+    "@typespec/xml": "workspace:^",
     "@vitejs/plugin-react": "~4.3.4",
     "es-module-shims": "~2.0.10",
     "react": "~18.3.1",
@@ -79,8 +79,8 @@
     "@playwright/test": "^1.50.1",
     "@types/node": "~22.13.9",
     "@types/react-dom": "~18.3.0",
-    "@typespec/bundler": "workspace:~",
-    "@typespec/playground": "workspace:~",
+    "@typespec/bundler": "workspace:^",
+    "@typespec/playground": "workspace:^",
     "@vitest/coverage-v8": "^3.0.7",
     "@vitest/ui": "^3.0.7",
     "cross-env": "~7.0.3",
