--- a/packages/typespec-azure-portal-core/package.json
+++ b/packages/typespec-azure-portal-core/package.json
@@ -28,22 +28,22 @@
   "main": "dist/src/index.js",
   "tspMain": "lib/main.tsp",
   "peerDependencies": {
-    "@azure-tools/typespec-azure-resource-manager": "workspace:~",
-    "@typespec/compiler": "workspace:~"
+    "@azure-tools/typespec-azure-resource-manager": "workspace:^",
+    "@typespec/compiler": "workspace:^"
   },
   "devDependencies": {
-    "@azure-tools/typespec-autorest": "workspace:~",
-    "@azure-tools/typespec-azure-core": "workspace:~",
-    "@azure-tools/typespec-azure-resource-manager": "workspace:~",
-    "@azure-tools/typespec-client-generator-core": "workspace:~",
+    "@azure-tools/typespec-autorest": "workspace:^",
+    "@azure-tools/typespec-azure-core": "workspace:^",
+    "@azure-tools/typespec-azure-resource-manager": "workspace:^",
+    "@azure-tools/typespec-client-generator-core": "workspace:^",
     "@types/node": "~22.13.9",
-    "@typespec/compiler": "workspace:~",
-    "@typespec/http": "workspace:~",
-    "@typespec/library-linter": "workspace:~",
-    "@typespec/openapi": "workspace:~",
-    "@typespec/rest": "workspace:~",
-    "@typespec/tspd": "workspace:~",
-    "@typespec/versioning": "workspace:~",
+    "@typespec/compiler": "workspace:^",
+    "@typespec/http": "workspace:^",
+    "@typespec/library-linter": "workspace:^",
+    "@typespec/openapi": "workspace:^",
+    "@typespec/rest": "workspace:^",
+    "@typespec/tspd": "workspace:^",
+    "@typespec/versioning": "workspace:^",
     "@vitest/coverage-v8": "^3.0.7",
     "@vitest/ui": "^3.0.7",
     "c8": "^10.1.3",
