--- a/website/package.json
+++ b/website/package.json
@@ -19,7 +19,7 @@
     "@docsearch/css": "^3.9.0",
     "@docsearch/js": "^3.9.0",
     "@fluentui/react-components": "~9.60.0",
-    "@typespec/playground": "workspace:~",
+    "@typespec/playground": "workspace:^",
     "astro": "^5.4.2",
     "es-module-shims": "~2.0.10",
     "react": "~18.3.1",
@@ -28,21 +28,21 @@
     "typescript": "~5.8.2"
   },
   "devDependencies": {
-    "@azure-tools/typespec-autorest": "workspace:~",
-    "@azure-tools/typespec-autorest-canonical": "workspace:~",
-    "@azure-tools/typespec-azure-core": "workspace:~",
-    "@azure-tools/typespec-azure-playground-website": "workspace:~",
-    "@azure-tools/typespec-azure-portal-core": "workspace:~",
-    "@azure-tools/typespec-azure-resource-manager": "workspace:~",
-    "@azure-tools/typespec-azure-rulesets": "workspace:~",
-    "@azure-tools/typespec-client-generator-core": "workspace:~",
+    "@azure-tools/typespec-autorest": "workspace:^",
+    "@azure-tools/typespec-autorest-canonical": "workspace:^",
+    "@azure-tools/typespec-azure-core": "workspace:^",
+    "@azure-tools/typespec-azure-playground-website": "workspace:^",
+    "@azure-tools/typespec-azure-portal-core": "workspace:^",
+    "@azure-tools/typespec-azure-resource-manager": "workspace:^",
+    "@azure-tools/typespec-azure-rulesets": "workspace:^",
+    "@azure-tools/typespec-client-generator-core": "workspace:^",
     "@types/hast": "^3.0.4",
     "@types/react": "~18.3.11",
     "@types/react-dom": "~18.3.0",
     "@types/remark-heading-id": "^1.0.0",
-    "@typespec/astro-utils": "workspace:~",
-    "@typespec/internal-build-utils": "workspace:~",
-    "@typespec/spec-dashboard": "workspace:~",
+    "@typespec/astro-utils": "workspace:^",
+    "@typespec/internal-build-utils": "workspace:^",
+    "@typespec/spec-dashboard": "workspace:^",
     "astro-expressive-code": "^0.40.2",
     "astro-rehype-relative-markdown-links": "^0.18.1",
     "hast-util-to-html": "^9.0.5",
