--- a/packages/typespec-azure-rulesets/package.json
+++ b/packages/typespec-azure-rulesets/package.json
@@ -21,7 +21,9 @@
   "main": "dist/src/index.js",
   "tspMain": "dist/src/index.js",
   "exports": {
-    ".": "./dist/src/index.js"
+    ".": {
+      "import": "./dist/src/index.js"
+    }
   },
   "engines": {
     "node": ">=20.0.0"
