--- a/packages/typespec-autorest/package.json
+++ b/packages/typespec-autorest/package.json
@@ -22,6 +22,7 @@
   "tspMain": "lib/autorest.tsp",
   "exports": {
     ".": {
+      "typespec": "./lib/autorest.tsp",
       "types": "./dist/src/index.d.ts",
       "default": "./dist/src/index.js"
     },
