--- a/packages/typespec-azure-resource-manager/package.json
+++ b/packages/typespec-azure-resource-manager/package.json
@@ -21,6 +21,7 @@
   "tspMain": "lib/arm.tsp",
   "exports": {
     ".": {
+      "typespec": "./lib/arm.tsp",
       "types": "./dist/src/index.d.ts",
       "default": "./dist/src/index.js"
     },
