update tspconfig options style

--- a/eng/feeds/__snapshots__/azure-core_stand_alone/tspconfig.yaml
+++ b/eng/feeds/__snapshots__/azure-core_stand_alone/tspconfig.yaml
@@ -21,9 +21,9 @@ options:
     model-namespace: false
   "@azure-tools/typespec-ts":
     package-dir: "azure-contoso-rest"
-    generateMetadata: true
-    generateTest: true
-    packageDetails:
+    generate-metadata: true
+    generate-test: true
+    package-details:
       name: "@azure-rest/azure-contoso-rest"
       description: "Azure.Contoso Service"
   "@azure-tools/typespec-java":
