--- a/tsconfig.ws.json
+++ b/tsconfig.ws.json
@@ -7,6 +7,7 @@
     { "path": "packages/typespec-azure-resource-manager/tsconfig.json" },
     { "path": "packages/typespec-client-generator-core/tsconfig.json" },
     { "path": "packages/typespec-azure-rulesets/tsconfig.json" },
+    { "path": "packages/azure-http-specs/tsconfig.json" },
     { "path": "packages/samples/tsconfig.json" }
   ],
   "files": []
