--- a/website/package.json
+++ b/website/package.json
@@ -9,6 +9,7 @@
     "build": "tsx ./.scripts/build.ts",
     "build:web": "pnpm regen-all-packages-docs && astro check --minimumFailingSeverity warning && astro build",
     "preview": "astro preview",
+    "update-playground-versions": "tsx ./.scripts/update-playground-versions.ts",
     "regen-all-packages-docs": "pnpm -w --filter \"@azure-tools/typespec-azure-website...\" --filter \"!@typespec/monorepo\" --filter \"!@azure-tools/typespec-azure-monorepo\" run regen-docs",
     "astro": "astro"
   },
