--- a/website/package.json
+++ b/website/package.json
@@ -7,7 +7,7 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "tsx ./.scripts/build.ts",
-    "build:web": "pnpm regen-all-packages-docs && astro check --minimumFailingSeverity warning && astro build",
+    "build:web": "pnpm regen-all-packages-docs && astro check --minimumFailingSeverity hint && astro build",
     "preview": "astro preview",
     "update-playground-versions": "tsx ./.scripts/update-playground-versions.ts",
     "regen-all-packages-docs": "pnpm -w --filter \"@azure-tools/typespec-azure-website...\" --filter \"!@typespec/monorepo\" --filter \"!@azure-tools/typespec-azure-monorepo\" run regen-docs",
