--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
     "picocolors": "~1.1.1"
   },
   "pnpm": {
-    "onlyBuiltDependencies": ["tree-sitter"]
+    "onlyBuiltDependencies": [
+      "tree-sitter"
+    ]
   }
 }
