--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "type": "module",
-  "packageManager": "pnpm@9.5.0",
+  "packageManager": "pnpm@10.8.0",
   "scripts": {
     "run-all": "pnpm -r --filter=!./core/",
     "run-azure-only": "pnpm -r --filter=\"!./core/**\"",
@@ -54,6 +54,7 @@
     "prettier": "~3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-organize-imports": "~4.1.0",
+    "prettier-plugin-sh": "^0.15.0",
     "rimraf": "~6.0.1",
     "syncpack": "^13.0.3",
     "tsx": "^4.19.3",
@@ -73,5 +74,10 @@
   },
   "dependencies": {
     "picocolors": "~1.1.1"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "tree-sitter"
+    ]
   }
 }
