--- a/packages/typespec-azure-resource-manager/package.json
+++ b/packages/typespec-azure-resource-manager/package.json
@@ -46,8 +46,7 @@
     "test:ci": "vitest run --coverage  --reporter=junit --reporter=default",
     "lint": "eslint .  --max-warnings=0",
     "lint:fix": "eslint . --fix ",
-    "regen-docs": "tspd doc .  --enable-experimental  --output-dir ../../website/src/content/docs/docs/libraries/azure-resource-manager/reference",
-    "update-common-types": "node ./dist/src/update-common-types.js"
+    "regen-docs": "tspd doc .  --enable-experimental  --output-dir ../../website/src/content/docs/docs/libraries/azure-resource-manager/reference"
   },
   "files": [
     "lib/**/*.tsp",
@@ -84,5 +83,8 @@
     "rimraf": "~6.0.1",
     "typescript": "~5.8.2",
     "vitest": "^3.0.9"
+  },
+  "bin": {
+    "update-common-types": "./dist/src/update-common-types.js"
   }
 }
