--- a/eng/feeds/data-plane/tspconfig.yaml
+++ b/eng/feeds/data-plane/tspconfig.yaml
@@ -21,9 +21,8 @@ options:
     model-namespace: false
   "@azure-tools/typespec-ts":
     package-dir: "{{#normalizePackageName}}{{parameters.ServiceNamespace}}{{/normalizePackageName}}-rest"
-    generate-test: true
     package-details:
-      name: "@azure-rest/{{#normalizePackageName}}{{parameters.ServiceNamespace}}{{/normalizePackageName}}-rest"
+      name: "@azure-rest/{{#normalizePackageName}}{{parameters.ServiceNamespace}}{{/normalizePackageName}}"
       description: "{{parameters.ServiceNamespace}} Service"
   "@azure-tools/typespec-java":
     package-dir: "{{#normalizePackageName}}{{parameters.ServiceNamespace}}{{/normalizePackageName}}"
