--- a/packages/typespec-autorest/package.json
+++ b/packages/typespec-autorest/package.json
@@ -47,8 +47,7 @@
     "test:ci": "vitest run --coverage --reporter=junit --reporter=default",
     "lint": "eslint .  --max-warnings=0",
     "lint:fix": "eslint . --fix ",
-    "regen-docs": "tspd doc .  --enable-experimental  --output-dir ../../website/src/content/docs/docs/emitters/typespec-autorest/reference",
-    "regen-common-types": "tsx ./src/common-types-generator/update-common-types.ts"
+    "regen-docs": "tspd doc .  --enable-experimental  --output-dir ../../website/src/content/docs/docs/emitters/typespec-autorest/reference"
   },
   "files": [
     "lib/*.tsp",
