--- a/eng/feeds/data-plane/tspconfig.yaml
+++ b/eng/feeds/data-plane/tspconfig.yaml
@@ -24,6 +24,7 @@ options:
     package-details:
       name: "@azure-rest/{{#normalizePackageName}}{{parameters.ServiceNamespace}}{{/normalizePackageName}}"
       description: "{{parameters.ServiceNamespace}} Service"
+    flavor: azure
   "@azure-tools/typespec-java":
     package-dir: "{{#normalizePackageName}}{{parameters.ServiceNamespace}}{{/normalizePackageName}}"
     namespace: com.{{#toLowerCase}}{{parameters.ServiceNamespace}}{{/toLowerCase}}
