--- a/eng/feeds/__snapshots__/azure-core/tspconfig.yaml
+++ b/eng/feeds/__snapshots__/azure-core/tspconfig.yaml
@@ -24,6 +24,7 @@ options:
     package-details:
       name: "@azure-rest/azure-contoso"
       description: "Azure.Contoso Service"
+    flavor: azure
   "@azure-tools/typespec-java":
     package-dir: "azure-contoso"
     namespace: com.azure.contoso
