Update JS template in tsp init command (#2581)
resolved
https://github.com/Azure/typespec-azure/pull/2541/files#r2057393146

---------

Co-authored-by: Mary Gao <yanmeigao1210@gmail.com>

--- a/eng/feeds/__snapshots__/azure-core/tspconfig.yaml
+++ b/eng/feeds/__snapshots__/azure-core/tspconfig.yaml
@@ -21,10 +21,10 @@ options:
     model-namespace: false
   "@azure-tools/typespec-ts":
     package-dir: "azure-contoso-rest"
-    generate-test: true
     package-details:
-      name: "@azure-rest/azure-contoso-rest"
+      name: "@azure-rest/azure-contoso"
       description: "Azure.Contoso Service"
+    flavor: azure
   "@azure-tools/typespec-java":
     package-dir: "azure-contoso"
     namespace: com.azure.contoso
