update to package

--- a/packages/typespec-azure-resource-manager/package.json
+++ b/packages/typespec-azure-resource-manager/package.json
@@ -29,7 +29,10 @@
       "types": "./dist/src/testing/index.d.ts",
       "default": "./dist/src/testing/index.js"
     },
-    "./common-types/*": "./lib/common-types/*"
+    "./common-types/*": {
+      "typespec": "./lib/common-types/*",
+      "default": "./dist/src/index.js"
+    }
   },
   "type": "module",
   "engines": {
